; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/libtests/extr_pngvalid.c_store_verbose.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/libtests/extr_pngvalid.c_store_verbose.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i8*, i8*)* @store_verbose to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @store_verbose(i32* %0, i32 %1, i8* %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca [512 x i8], align 16
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %12, label %16

12:                                               ; preds = %4
  %13 = load i8*, i8** %7, align 8
  %14 = load i32, i32* @stderr, align 4
  %15 = call i32 @fputs(i8* %13, i32 %14)
  br label %16

16:                                               ; preds = %12, %4
  %17 = load i32*, i32** %5, align 8
  %18 = load i32, i32* %6, align 4
  %19 = getelementptr inbounds [512 x i8], [512 x i8]* %9, i64 0, i64 0
  %20 = load i8*, i8** %8, align 8
  %21 = call i32 @store_message(i32* %17, i32 %18, i8* %19, i32 512, i32 0, i8* %20)
  %22 = getelementptr inbounds [512 x i8], [512 x i8]* %9, i64 0, i64 0
  %23 = load i32, i32* @stderr, align 4
  %24 = call i32 @fputs(i8* %22, i32 %23)
  %25 = load i32, i32* @stderr, align 4
  %26 = call i32 @fputc(i8 signext 10, i32 %25)
  ret void
}

declare dso_local i32 @fputs(i8*, i32) #1

declare dso_local i32 @store_message(i32*, i32, i8*, i32, i32, i8*) #1

declare dso_local i32 @fputc(i8 signext, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
